5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1836_1275.log
== TEST (2019-06-20 13:47:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= zeros((n:), dtype=int)

for i in range(n):
	hor= sum(n[i:])
print (hor)
-- ERROR:
File "XXXX", line 6
    hor= zeros((n:), dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 13:49:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= shape(n)[0]

for i in range(hor):
	hor= sum(n[i:])
print (hor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 13:50:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= shape(n)[1]

for i in range(hor):
	hor= sum(n[i:])
print (hor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 13:52:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= shape(n)[1]
vet= zeros((hor),dtype=int)
for i in range(hor):
	hor= sum(n[i:])
print (hor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 13:53:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= shape(n)[1]
vet= zeros((hor),dtype=int)
for i in range(vet):
	hor= sum(n[i:])
print (vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:34:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= zeros((n,7),dtype=int)
print(hor)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:34:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= zeros((n,7),dtype=int)
print(hor)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:35:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= zeros((n,7),dtype=int)
print(hor)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:36:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= zeros((n),dtype=int)
print(hor)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:36:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

hor= zeros((n),dtype=int)
print(mat.shape(hor))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:39:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

print(sum(n))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:39:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

print(sum(n[1]))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:41:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))
x= zeros((n),dtype=int)
for i in range(n):
	a=sum(n[i])
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:41:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

for i in range(n):
	a=sum(n[i])
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:41:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

for i in range(size(n)):
	a=sum(n[i])
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:43:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

for i in range(size(n)):
	a=sum(n[i])
print(n[0],n[1],n[2],n[3])

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:43:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

print(n[0],n[1],n[2],n[3])

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:43:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

print(sum(n[0],n[1],n[2],n[3]))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:44:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

print(sum(n[0]),sum(n[1]),sum(n[2]),sum(n[3]))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:45:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= zeros(size(n),dtype=int)

print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:45:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= zeros((n),dtype=int)

print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:46:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= zeros(size(n),dtype=int)

print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:47:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= zeros(size(n),dtype=int)

print(x)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:49:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

print(x)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:50:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	x= sum(n[i])
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:50:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	x= sum(n[i])
print(x)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:50:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	x= sum(n[i])
print(x)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:53:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[x]= sum(n[i])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:53:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[i]= sum(n[i])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:54:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[x]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:56:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(x):
	total[x]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:56:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(x):
	total[x]= sum(n[1,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:57:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[x]= sum(n[1,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:58:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:58:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:59:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(n):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:02:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]

for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:02:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]
total=0
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:03:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]
total=zeros((n),dtype=int)
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:03:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]
total=zeros((n),dtype=int)
for i in range(i):
	total[x]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:03:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:04:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	

	
	
-- EXECUTION TIME:
1.00052
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
